--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <title>Indego Locator</title>
 </head>
 <body>
-  
+  <header>
+    <h1>Indego Locator</h1>
+  </header>
+  <footer>
+    <p>Coded by <a href="https://github.com/scabralo">Sergio Cabral</a> for <a href="https://punkave.com/">P'unk Ave</a>.</p>
+  </footer>
 </body>
 <script src="script.js"></script>
 </html>
