--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p>Coded by <a href="https://github.com/scabralo">Sergio Cabral</a> for <a href="https://punkave.com/">P'unk Ave</a>.</p>
   </footer>
   <script src="script.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo4_QbLaIe-ph4wcFa6on13wnGR_fXbck&callback=indegoMap&libraries=places"></script>
 </body>
 </html>
