Adds Header's inner structure and classes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
   <title>Indego Locator</title>
 </head>
 <body>
-  <header>
+  <header class="d-flex align-items-center">
+    <div class="container-xl">
+        <div class="row">
+          <div class="col d-flex justify-content-between">
     <h1>Indego Locator</h1>
+          </div>
+        </div>
+    </div>
   </header>
   <footer>
     <p>Coded by <a href="https://github.com/scabralo">Sergio Cabral</a> for <a href="https://punkave.com/">P'unk Ave</a>.</p>
