--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="row">
           <div class="col d-flex justify-content-between">
     <h1>Indego Locator</h1>
+            <form id="location-search" class="d-flex align-items-center justify-content-end">
+              <input type="text" name="location" id="location-input" placeholder="Give me an address!">
+              <input type="submit" value="Search!" class="btn btn-primary">
+            </form>
           </div>
         </div>
     </div>
