Adds Footer inner structure and classes

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
         </div>
     </div>
   </header>
-  <footer>
-    <p>Coded by <a href="https://github.com/scabralo">Sergio Cabral</a> for <a href="https://punkave.com/">P'unk Ave</a>.</p>
+  <footer class="d-flex align-items-center">
+    <div class="container">
+      <div class="row">
+        <div class="col d-flex justify-content-center">
+          <p>Coded with <span style="color: red;"><strong>LOVE</strong></span> by <a href="https://github.com/scabralo">Sergio Cabral</a> for <a href="https://punkave.com/">P'unk Ave</a>.</p>
+        </div>
+      </div>
+      
+    </div>
   </footer>
   <script src="script.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo4_QbLaIe-ph4wcFa6on13wnGR_fXbck&callback=indegoMap&libraries=places"></script>
