--- a/index.html
+++ b/index.html
@@ -24,6 +24,32 @@
         </div>
     </div>
   </header>
+  <main>
+    <div class="weather-info-container">
+      <div class="weather-data-wrapper">
+        <div class="temp-container d-flex">
+          <p class="current-temp d-flex">
+            <span class="temp-value">32</span>
+            <span class="farenheit-simbol">&#8457;</span>
+            <span class="celsius-simbol hidden">&#8451;</span>
+          </p>
+          <div class="max-min-container d-flex flex-column justify-content-center">
+            <p class="max-temp d-flex">
+              Max.&nbsp;<span class="max-temp-value">40</span>
+              <span class="farenheit-simbol">&#8457;</span>
+            </p>
+            <p class="min-temp d-flex">
+              Min.&nbsp;<span class="min-temp-value">20</span>&#8457;
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="weather-message-wrapper">
+        <p class="weather-message">It's a great day for a ride!</p>
+      </div>
+    </div>
+    <div id="map-container"></div>
+  </main>
   <footer class="d-flex align-items-center">
     <div class="container">
       <div class="row">
