Adds Overlay HTML to project

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
       </div>
     </div>
     <div id="map-container"></div>
+    <div id="overlay" class="hidden">
+      <div id="popup">
+          <div id="close" class="btn btn-danger">X</div>
+          <h2 id="station-name"></h2>
+          <p><strong>Bikes:</strong> <span id="bikes-available"></span></p>
+          <p><strong>Docks:</strong> <span id="docks-available"></span></p>
+          <p><strong>Address:</strong> <span id="station-address"></span></p>
+      </div>
+    </div>
   </main>
   <footer class="d-flex align-items-center">
     <div class="container">
