Updates Maps script src

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       
     </div>
   </footer>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo4_QbLaIe-ph4wcFa6on13wnGR_fXbck&libraries=places"></script>
   <script src="script.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo4_QbLaIe-ph4wcFa6on13wnGR_fXbck&callback=indegoMap&libraries=places"></script>
 </body>
