Updates weather-message-wrapper & sibling element

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           </div>
         </div>
       </div>
-      <div class="weather-message-wrapper">
-        <p class="weather-message">It's a great day for a ride!</p>
+      <div class="weather-message-wrapper hidden">
+          <div class="weather-message alert alert-danger" role="alert"></div>
       </div>
     </div>
     <div id="map-container"></div>
