Updates Min Max Temp visualization, no icon

--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
           </p>
           <div class="max-min-container d-flex flex-column justify-content-center">
             <p class="max-temp d-flex">
-              Max.&nbsp;<span class="max-temp-value">40</span>
-              <span class="farenheit-simbol">&#8457;</span>
+              H&nbsp;<span class="max-temp-value">--</span>&#8457;
             </p>
             <p class="min-temp d-flex">
-              Min.&nbsp;<span class="min-temp-value">20</span>&#8457;
+              L&nbsp;<span class="min-temp-value">--</span>&#8457;
             </p>
           </div>
         </div>
