--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="weather-data-wrapper">
         <div class="temp-container d-flex">
           <p class="current-temp d-flex">
-            <span class="temp-value">32</span>
+            <img class="weather-icon"src="http://openweathermap.org/img/wn/01n.png" alt="weather icon" />
             <span class="farenheit-simbol">&#8457;</span>
             <span class="celsius-simbol hidden">&#8451;</span>
           </p>
