Adds default value to temp-value

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="temp-container d-flex">
           <p class="current-temp d-flex">
             <img class="weather-icon"src="http://openweathermap.org/img/wn/01n.png" alt="weather icon" />
+            <span class="temp-value">--</span>
             <span class="farenheit-simbol">&#8457;</span>
             <span class="celsius-simbol hidden">&#8451;</span>
           </p>
