--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header class="d-flex align-items-center">
     <div class="container-xl">
         <div class="row">
-          <div class="col d-flex justify-content-between">
-    <h1>Indego Locator</h1>
+          <div class="col d-flex flex-column flex-md-row justify-content-between">
+            <h1>Indego Locator</h1>
             <form id="location-search" class="d-flex align-items-center justify-content-end">
               <input type="text" name="location" id="location-input" placeholder="Give me an address!">
               <input type="submit" value="Search!" class="btn btn-primary">
@@ -27,14 +27,14 @@
   <main>
     <div class="weather-info-container">
       <div class="weather-data-wrapper">
-        <div class="temp-container d-flex">
+        <div class="temp-container d-flex align-items-center flex-column">
           <p class="current-temp d-flex">
             <img class="weather-icon"src="http://openweathermap.org/img/wn/01n.png" alt="weather icon" />
             <span class="temp-value">--</span>
             <span class="farenheit-simbol">&#8457;</span>
             <span class="celsius-simbol hidden">&#8451;</span>
           </p>
-          <div class="max-min-container d-flex flex-column justify-content-center">
+          <div class="max-min-container d-flex justify-content-center">
             <p class="max-temp d-flex">
               H&nbsp;<span class="max-temp-value">--</span>&#8457;
             </p>
@@ -66,11 +66,9 @@
           <p>Coded with <span style="color: red;"><strong>LOVE</strong></span> by <a href="https://github.com/scabralo">Sergio Cabral</a> for <a href="https://punkave.com/">P'unk Ave</a>.</p>
         </div>
       </div>
-      
     </div>
   </footer>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo4_QbLaIe-ph4wcFa6on13wnGR_fXbck&libraries=places"></script>
   <script src="script.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo4_QbLaIe-ph4wcFa6on13wnGR_fXbck&callback=indegoMap&libraries=places"></script>
 </body>
 </html>
