--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div id="map-container"></div>
-    <div id="overlay" class="hidden">
+    <div id="overlay">
       <div id="popup">
           <div id="close" class="btn btn-danger">X</div>
           <h2 id="station-name"></h2>
