Adds "available" to bikes & docks count on overlay

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <div id="popup">
           <div id="close" class="btn btn-danger">X</div>
           <h2 id="station-name"></h2>
-          <p><strong>Bikes:</strong> <span id="bikes-available"></span></p>
-          <p><strong>Docks:</strong> <span id="docks-available"></span></p>
+          <p><strong>Bikes:</strong> <span id="bikes-available"></span> available</p>
+          <p><strong>Docks:</strong> <span id="docks-available"></span> available</p>
           <p><strong>Address:</strong> <span id="station-address"></span></p>
       </div>
     </div>
