Eliminates API KEY

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   </footer>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo4_QbLaIe-ph4wcFa6on13wnGR_fXbck&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=<API_KEY>&libraries=places"></script>
   <script src="script.js"></script>
 </body>
 </html>
